# mcu-ui-studio-for-lvgl

./: .gitignore  Ai.McuUiStudio.slnx  CHANGELOG.de.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.de.md  README.md  SECURITY.md  mcu_ui_studio_for_lvgl.sln  run.sh
.github/ISSUE_TEMPLATE/: documentation.yml  feature_request.yml  issue.yml
.github/workflows/: docs-pages.yml
GitHub/: README.md  macarm_build_way.md  mkdocs.yml  windows_build_way.md
examples/: README.md
examples/kachel/: kachel.lvglproj
examples/kachel/screens/: ui_start.json
examples/portal/: portal.lvglproj
examples/portal/screens/: ui_start.json
examples/targets/: README.md
examples/targets/kachel/: CMakeLists.txt  README.md
examples/targets/portal/: README.de.md  README.md  run.sh  sdkconfig.defaults
examples/targets/portal/main/: CMakeLists.txt  controller.c  display.c  display_font.c  fieldbus.c  lv_conf.h  machine.c  main.c  message.c  theme_project.c
examples/targets/portal/main/include/: controller.h  display.h  display_font.h  fieldbus.h  machine.h  message.h
examples/targets/widgets/: README.md  sdkconfig.defaults
examples/targets/widgets/main/: CMakeLists.txt  app_logic.c  display.c  idf_component.yml
examples/targets/widgets/main/include/: app_logic.h  display.h
examples/widgets/: theme_project.c  widgets.lvglproj
examples/widgets/screens/: ui_start.json
native/lvgl_simulator_host/: CMakeLists.txt  README.md  lv_conf.h
native/lvgl_simulator_host/config/: lv_conf.h
native/lvgl_simulator_host/include/: lvgl_simulator_build_config.h.in  lvgl_simulator_protocol.h  lvgl_simulator_runtime.h  lvgl_simulator_server.h
native/lvgl_simulator_host/src/: lvgl_simulator_runtime_lvgl.c  lvgl_simulator_runtime_lvgl_internal.h  lvgl_simulator_runtime_lvgl_platform.c  lvgl_simulator_runtime_lvgl_screen.c  lvgl_simulator_runtime_stub.c  lvgl_simulator_server.c  main.c
src/Ai.McuUiStudio.App/: Ai.McuUiStudio.App.csproj  App.axaml  App.axaml.cs  Program.cs
src/Ai.McuUiStudio.App/Localization/: lvgl-9.4.de.json  lvgl-9.4.en.json  lvgl-9.4.es.json  lvgl-9.4.fr.json  lvgl-9.4.it.json  lvgl-9.4.pt.json  ui.de.json  ui.en.json  ui.es.json  ui.fr.json  ui.it.json  ui.pt.json
src/Ai.McuUiStudio.App/Services/: AppRuntimePaths.cs
src/Ai.McuUiStudio.App/ViewModels/: AttributeEditorViewModel.cs  ChoiceDialogViewModel.cs  ConfirmDialogViewModel.cs  EditorStateViewModel.cs  FolderExplorerDialogViewModel.cs  FolderPickerDialogViewModel.cs  InfoDialogViewModel.cs  LvConfDialogViewModel.cs  LvConfOptionViewModel.cs  MainWindowViewModel.cs  NodeViewModel.cs  ProjectDialogViewModel.cs  ProjectSettingsViewModel.cs  PropertyGridItemViewModel.cs  ScreenFileDialogViewModel.cs  TextInputDialogViewModel.cs  ThemeDialogViewModel.cs  ThemeOptionViewModel.cs  ToolboxCategoryViewModel.cs  ToolboxItemViewModel.cs  ViewModelBase.cs
src/Ai.McuUiStudio.App/Views/: ChoiceDialog.axaml  ChoiceDialog.axaml.cs  ConfirmDialog.axaml  ConfirmDialog.axaml.cs  FolderExplorerDialog.axaml  FolderExplorerDialog.axaml.cs  FolderPickerDialog.axaml  FolderPickerDialog.axaml.cs  InfoDialog.axaml  InfoDialog.axaml.cs  LvConfDialog.axaml  LvConfDialog.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  ProjectDialog.axaml  ProjectDialog.axaml.cs  ScreenFileDialog.axaml  ScreenFileDialog.axaml.cs  TextInputDialog.axaml  TextInputDialog.axaml.cs  ThemeDialog.axaml  ThemeDialog.axaml.cs
src/Ai.McuUiStudio.Core/: Ai.McuUiStudio.Core.csproj
src/Ai.McuUiStudio.Core/MetaModel/: AttributeTarget.cs  AttributeValueTypeDefinition.cs  ElementChildrenDefinition.cs  InstalledLvglRuntime.cs  LvglElementAttributeDefinition.cs  LvglElementDefinition.cs  LvglElementTargetDefinition.cs  LvglEventDefinition.cs  LvglMetaModelDefinition.cs  LvglMetaModelLoader.cs  LvglMetaModelRegistry.cs  LvglRuntimeDiscovery.cs  MetaModelDefinition.cs  MetaModelLoader.cs  MetaModelRegistry.cs  lvgl-9.4.metamodel.json  lvgl-basic.metamodel.json  ui-lvgl-9.4.metamodel.v2.json
src/Ai.McuUiStudio.Core/Model/: AttributeType.cs  ElementAttributeDefinition.cs  ElementDefinition.cs  UiDocument.cs  UiEventBinding.cs  UiNode.cs
src/Ai.McuUiStudio.Core/PreviewProtocol/: PreviewCommandMessage.cs  PreviewProtocolConstants.cs  PreviewReplyMessage.cs
src/Ai.McuUiStudio.Core/Services/: ContextEngine.cs  DocumentValidator.cs  JsonDocumentParser.cs  JsonDocumentSerializer.cs  JsonGenerator.cs  LvglCGenerationResult.cs  LvglCGenerator.cs  McuDisplayCodeGenerationResult.cs  McuDisplayCodeGenerator.cs  McuEventCodeGenerationResult.cs  McuEventCodeGenerator.cs  McuUpdateCodeGenerationResult.cs  McuUpdateCodeGenerator.cs  McuUpdateModel.cs  RtosMessagesCodeGenerationResult.cs  RtosMessagesCodeGenerator.cs  ValidationResult.cs  XmlDocumentParser.cs  XmlGenerator.cs
src/Ai.McuUiStudio.PreviewHost/: Ai.McuUiStudio.PreviewHost.csproj  App.axaml  App.axaml.cs  PreviewHostArguments.cs  Program.cs
src/Ai.McuUiStudio.PreviewHost/Services/: PreviewTcpServer.cs
src/Ai.McuUiStudio.PreviewHost/ViewModels/: PreviewHostWindowViewModel.cs  ViewModelBase.cs
src/Ai.McuUiStudio.PreviewHost/Views/: PreviewHostWindow.axaml  PreviewHostWindow.axaml.cs
templates/: lv_conf_project.h
usermanual/: mkdocs.de.yml  mkdocs.en.yml
usermanual/docs-en/: index.md
usermanual/docs-en/about/: about.md  license.md  manual-review.md  preface.md  project-status.md  third-party.md
usermanual/docs-en/guide/: code-generation.md  concepts.md  example-kachel.md  example-overview.md  example-portal.md  example-widgets.md  getting-started.md  template-rtos.md  template-standard.md  ui-diagnostics.md  ui-overview.md  ui-properties.md  ui-statusbar.md  ui-structure.md  ui-toolbar.md  ui-toolbox.md  widgets.md
usermanual/docs-en/overrides/: home.html
usermanual/docs/about/: about.md  license.md  manual-review.md  preface.md  project-status.md  third-party.md
usermanual/docs/guide/: code-generation.md  concepts.md  example-kachel.md  example-overview.md  example-portal.md  example-widgets.md  getting-started.md  template-rtos.md  ui-overview.md  (+8 more)
usermanual/pages-root/: index.html
(+22 files in other folders)
